# learning-minimind

./: .gitignore  README.md  eval_llm.py  pyproject.toml
dataset/: lm_dataset.py
model/: model.py  model_lora.py  model_minimind.py
trainer/: train_full_sft.py  train_lora.py  train_pretrain.py  trainer_utils.py
